--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.TrocaTelapos2025"
         tools:targetApi="31">
         <activity
-            android:name=".LancamentoActivity"
+            android:name=".ListarActivity"
             android:exported="false" />
         <activity
-            android:name=".LacamentoActivity"
+            android:name=".ConfirmarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LancamentoActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
